--- a/thesis-ex.bib
+++ b/thesis-ex.bib
@@ -1,4 +1,295 @@
 % !TEX root = thesis-ex.tex
+@article{RUSNAK:2014xfa,
+      author         = "Rusnak, Jan",
+      title          = "{Inclusive spectrum of charged jets in central Au+Au
+                        collisions at $\sqrt{{s}_{NN}}$ = 200 GeV by STAR}",
+      booktitle      = "{Proceedings, 2013 European Physical Society Conference
+                        on High Energy Physics (EPS-HEP 2013): Stockholm, Sweden,
+                        July 18-24, 2013}",
+      collaboration  = "STAR",
+      journal        = "PoS",
+      volume         = "EPS-HEP2013",
+      year           = "2013",
+      pages          = "191",
+      doi            = "10.22323/1.180.0191",
+      SLACcitation   = "%%CITATION = POSCI,EPS-HEP2013,191;%%"
+}
+
+@Booklet{CMS-PAS-HIN-12-004,
+      author = "{CMS Collaboration}",
+      title         = "{Nuclear modification factor of high transverse momentum
+                       jets in PbPb collisions at sqrt(sNN) = 2.76 TeV}",
+      institution   = "CERN",
+      collaboration = "CMS Collaboration",
+      address       = "Geneva",
+      number        = "CMS-PAS-HIN-12-004",
+      year          = "2012",
+      reportNumber  = "CMS-PAS-HIN-12-004",
+      url           = "http://cds.cern.ch/record/1472722",
+}
+
+@article{Hirano:2010je,
+      author         = "Hirano, Tetsufumi and Huovinen, Pasi and Nara, Yasushi",
+      title          = "{Elliptic flow in Pb+Pb collisions at $\sqrt{s_{NN}} =
+                        2.76$~TeV: hybrid model assessment of the first data}",
+      journal        = "Phys. Rev.",
+      volume         = "C84",
+      year           = "2011",
+      pages          = "011901",
+      doi            = "10.1103/PhysRevC.84.011901",
+      eprint         = "1012.3955",
+      archivePrefix  = "arXiv",
+      primaryClass   = "nucl-th",
+      SLACcitation   = "%%CITATION = ARXIV:1012.3955;%%"
+}
+
+@article{CasalderreySolana:2011gx,
+      author         = "Casalderrey-Solana, Jorge and Milhano, Jose Guilherme and
+                        Quiroga-Arias, Paloma",
+      title          = "{Out of Medium Fragmentation from Long-Lived Jet
+                        Showers}",
+      journal        = "Phys. Lett.",
+      volume         = "B710",
+      year           = "2012",
+      pages          = "175-181",
+      doi            = "10.1016/j.physletb.2012.02.066",
+      eprint         = "1111.0310",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2011-264",
+      SLACcitation   = "%%CITATION = ARXIV:1111.0310;%%"
+}
+
+@article{CasalderreySolana:2011us,
+      author         = "Casalderrey-Solana, Jorge and Liu, Hong and Mateos, David
+                        and Rajagopal, Krishna and Wiedemann, Urs Achim",
+      title          = "{Gauge/String Duality, Hot QCD and Heavy Ion Collisions}",
+      year           = "2011",
+      doi            = "10.1017/CBO9781139136747",
+      eprint         = "1101.0618",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "CERN-PH-TH-2010-316, MIT-CTP-4198, ICCUB-10-202",
+      SLACcitation   = "%%CITATION = ARXIV:1101.0618;%%"
+}
+
+
+@article{Chesler:2014jva,
+      author         = "Chesler, Paul M. and Rajagopal, Krishna",
+      title          = "{Jet quenching in strongly coupled plasma}",
+      journal        = "Phys. Rev.",
+      volume         = "D90",
+      year           = "2014",
+      number         = "2",
+      pages          = "025033",
+      doi            = "10.1103/PhysRevD.90.025033",
+      eprint         = "1402.6756",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1402.6756;%%"
+}
+
+@article{Ghiglieri:2015zma,
+      author         = "Ghiglieri, Jacopo and Teaney, Derek",
+      title          = "{Parton energy loss and momentum broadening at NLO in
+                        high temperature QCD plasmas}",
+      journal        = "Int. J. Mod. Phys.",
+      volume         = "E24",
+      year           = "2015",
+      number         = "11",
+      pages          = "1530013",
+      doi            = "10.1142/S0218301315300131, 10.1142/9789814663717_0006",
+      note           = "[,271(2016)]",
+      eprint         = "1502.03730",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1502.03730;%%"
+}
+
+@article{Mehtar-Tani:2013pia,
+      author         = "Mehtar-Tani, Yacine and Milhano, Jose Guilherme and
+                        Tywoniuk, Konrad",
+      title          = "{Jet physics in heavy-ion collisions}",
+      journal        = "Int. J. Mod. Phys.",
+      volume         = "A28",
+      year           = "2013",
+      pages          = "1340013",
+      doi            = "10.1142/S0217751X13400137",
+      eprint         = "1302.2579",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2013-025, ICCUB-13-043",
+      SLACcitation   = "%%CITATION = ARXIV:1302.2579;%%"
+}
+
+@article{Majumder:2010qh,
+      author         = "Majumder, A. and Van Leeuwen, M.",
+      title          = "{The Theory and Phenomenology of Perturbative QCD Based
+                        Jet Quenching}",
+      journal        = "Prog. Part. Nucl. Phys.",
+      volume         = "66",
+      year           = "2011",
+      pages          = "41-92",
+      doi            = "10.1016/j.ppnp.2010.09.001",
+      eprint         = "1002.2206",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1002.2206;%%"
+}
+
+@article{Jacobs:2004qv,
+      author         = "Jacobs, Peter and Wang, Xin-Nian",
+      title          = "{Matter in extremis: Ultrarelativistic nuclear collisions
+                        at RHIC}",
+      journal        = "Prog. Part. Nucl. Phys.",
+      volume         = "54",
+      year           = "2005",
+      pages          = "443-534",
+      doi            = "10.1016/j.ppnp.2004.09.001",
+      eprint         = "hep-ph/0405125",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0405125;%%"
+}
+
+@article{Chesler:2015nqz,
+      author         = "Chesler, Paul M. and Rajagopal, Krishna",
+      title          = "{On the Evolution of Jet Energy and Opening Angle in
+                        Strongly Coupled Plasma}",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2016",
+      pages          = "098",
+      doi            = "10.1007/JHEP05(2016)098",
+      eprint         = "1511.07567",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:1511.07567;%%"
+}
+
+
+@article{Chesler:2013urd,
+      author         = "Chesler, Paul M. and Lekaveckas, Mindaugas and Rajagopal,
+                        Krishna",
+      title          = "{Heavy quark energy loss far from equilibrium in a
+                        strongly coupled collision}",
+      journal        = "JHEP",
+      volume         = "10",
+      year           = "2013",
+      pages          = "013",
+      doi            = "10.1007/JHEP10(2013)013",
+      eprint         = "1306.0564",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "CERN-PH-TH-2013-109",
+      SLACcitation   = "%%CITATION = ARXIV:1306.0564;%%"
+}
+@article{DEramo:2010wup,
+      author         = "D'Eramo, Francesco and Liu, Hong and Rajagopal, Krishna",
+      title          = "{Transverse Momentum Broadening and the Jet Quenching
+                        Parameter, Redux}",
+      journal        = "Phys. Rev.",
+      volume         = "D84",
+      year           = "2011",
+      pages          = "065015",
+      doi            = "10.1103/PhysRevD.84.065015",
+      eprint         = "1006.1367",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4153",
+      SLACcitation   = "%%CITATION = ARXIV:1006.1367;%%"
+}
+@article{Hatta:2008tx,
+      author         = "Hatta, Y. and Iancu, E. and Mueller, A. H.",
+      title          = "{Jet evolution in the N=4 SYM plasma at strong coupling}",
+      journal        = "JHEP",
+      volume         = "05",
+      year           = "2008",
+      pages          = "037",
+      doi            = "10.1088/1126-6708/2008/05/037",
+      eprint         = "0803.2481",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:0803.2481;%%"
+}
+
+@article{Gubser:2008as,
+      author         = "Gubser, Steven S. and Gulotta, Daniel R. and Pufu, Silviu
+                        S. and Rocha, Fabio D.",
+      title          = "{Gluon energy loss in the gauge-string duality}",
+      journal        = "JHEP",
+      volume         = "10",
+      year           = "2008",
+      pages          = "052",
+      doi            = "10.1088/1126-6708/2008/10/052",
+      eprint         = "0803.1470",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "PUPT-2259",
+      SLACcitation   = "%%CITATION = ARXIV:0803.1470;%%"
+}
+@article{Chesler:2007an,
+      author         = "Chesler, Paul M. and Yaffe, Laurence G.",
+      title          = "{The Wake of a quark moving through a strongly-coupled
+                        plasma}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "99",
+      year           = "2007",
+      pages          = "152001",
+      doi            = "10.1103/PhysRevLett.99.152001",
+      eprint         = "0706.0368",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      SLACcitation   = "%%CITATION = ARXIV:0706.0368;%%"
+}
+@article{CasalderreySolana:2006rq,
+      author         = "Casalderrey-Solana, Jorge and Teaney, Derek",
+      title          = "{Heavy quark diffusion in strongly coupled N=4
+                        Yang-Mills}",
+      journal        = "Phys. Rev.",
+      volume         = "D74",
+      year           = "2006",
+      pages          = "085012",
+      doi            = "10.1103/PhysRevD.74.085012",
+      eprint         = "hep-ph/0605199",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/0605199;%%"
+}
+@article{Liu:2006ug,
+      author         = "Liu, Hong and Rajagopal, Krishna and Wiedemann, Urs
+                        Achim",
+      title          = "{Calculating the jet quenching parameter from AdS/CFT}",
+      journal        = "Phys. Rev. Lett.",
+      volume         = "97",
+      year           = "2006",
+      pages          = "182301",
+      doi            = "10.1103/PhysRevLett.97.182301",
+      eprint         = "hep-ph/0605178",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-3739, RBRC-601",
+      SLACcitation   = "%%CITATION = HEP-PH/0605178;%%"
+}
+
+@article{Herzog:2006gh,
+      author         = "Herzog, C. P. and Karch, A. and Kovtun, P. and Kozcaz, C.
+                        and Yaffe, L. G.",
+      title          = "{Energy loss of a heavy quark moving through N=4
+                        supersymmetric Yang-Mills plasma}",
+      journal        = "JHEP",
+      volume         = "07",
+      year           = "2006",
+      pages          = "013",
+      doi            = "10.1088/1126-6708/2006/07/013",
+      eprint         = "hep-th/0605158",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-th",
+      reportNumber   = "NSF-KITP-06-36",
+      SLACcitation   = "%%CITATION = HEP-TH/0605158;%%"
+}
+
+%%%%%%
 @article{Tachibana:2017syd,
       author         = "Tachibana, Yasuki and Chang, Ning-Bo and Qin, Guang-You",
       title          = "{Full jet in quark-gluon plasma with hydrodynamic medium
@@ -1751,8 +2042,7 @@ nourl="https://doi.org/10.1007/s100520000474"
       volume         = "10",
       year           = "2014",
       pages          = "019",
-      doi            = "10.1007/JHEP09(2015)175, 10.1007/JHEP10(2014)019",
-      note           = "[Erratum: JHEP09,175(2015)]",
+      doi            = "10.1007/JHEP10(2014)019",
       eprint         = "1405.3864",
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ph",
