done with hybrid model section

--- a/jetMeasurements.tex
+++ b/jetMeasurements.tex
@@ -304,7 +304,7 @@ The $R_{\rm AA}^\rho$ distribution in Figure~\ref{fig:jf_jetshapemod}, shows tha
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Hybrid Model}
-This discussion is based on the work in Refs. \cite{Casalderrey-Solana:2014bpa, Hulcher2018, Casalderrey-Solana:2016jvj} and describes jet quenching using a hybrid strong/weak model. It uses perturbative QCD to describe the weakly coupled hard process of jet production and holographic calculations of the energy loss of energetic probes to model the strong coupling between the probe and the plasma \cite{Chesler:2015nqz, Chesler:2014jva}. This is a combination of approaches that focus on the following extreme limits: a weakly coupled system at unrealistically high temperatures that can be treated perturbatively \cite{Jacobs:2004qv, Majumder:2010qh} and a system where the coupling constant is large at all energy scales and Gauge/string duality is applicable \cite{CasalderreySolana:2011us}.
+This discussion is based on the work in Refs. \cite{Casalderrey-Solana:2014bpa, Hulcher:2017cpt, Casalderrey-Solana:2016jvj} and describes jet quenching using a hybrid strong/weak model. It uses perturbative QCD to describe the weakly coupled hard process of jet production and holographic calculations of the energy loss of energetic probes to model the strong coupling between the probe and the plasma \cite{Chesler:2015nqz, Chesler:2014jva}. This is a combination of approaches that focus on the following extreme limits: a weakly coupled system at unrealistically high temperatures that can be treated perturbatively \cite{Jacobs:2004qv, Majumder:2010qh} and a system where the coupling constant is large at all energy scales and Gauge/string duality is applicable \cite{CasalderreySolana:2011us}.
 
 In this model, the jet evolves in space time with the lifetime of the parton in the shower being given by \cite{CasalderreySolana:2011gx}.  
 
@@ -325,7 +325,7 @@ where $\kappa_\mathrm{sc}$ is a dimensionless free parameter associated to the s
 
 The partons further experience kicks transverse to their direction of motion, a phenomena called transverse momentum broadening. This effect is mainly experienced by softer partons that are much more affected by the angular narrowing effects of energy loss, making most measured observables insensitive to the size of this kick. This is directly related to wider jets losing more energy than narrower ones. The wake left in the medium from the partons depositing momentum in the QGP as they propagate through it lends a non-trivial impact to the model predictions. This wake moves in the direction of the jet and is impossible to separate out in experiments, making its inclusion to any model vital. This wake results in a perturbation to the hydrodynamic background, resulting in corrections to the final state hadron spectra. This effect is particularly important for jet substructure observables like jet fragmentation and jet shapes \cite{Casalderrey-Solana:2016jvj}.
 
-A screening effect recently included in the hybrid model is based on the resolving power of the QGP \cite{Hulcher:2017cpt}. As seen in Figure~\ref{fig:hm_lres}, the QGP will only resolve daughter partons of a splitting after they are separated by a certain distance $L_\mathrm{res}$. It is only when the partons are resolved that they will be allowed them to lose energy independent of each other. This delayed quenching results in an enhancement of softer partons at larger angles from the jet axis compared to the case where the daughter partons are resolved immediately after they split from the parent parton. This \Lres\ has the constraint $ 1/(\pi T) < \Lres < 2 /(\pt T$ based on the Debye screening length for the plasma, i.e. the length at which the QGP is able to resolve and screen color charges.
+A screening effect recently included in the hybrid model is based considering the resolving power of the QGP \cite{Hulcher:2017cpt}. As depicted in Figure~\ref{fig:hm_lres}, the QGP will only resolve daughter partons of a splitting after they are separated by a certain distance $L_\mathrm{res}$. It is only after they are resolved that they will be allowed them to lose energy independent of each other. This delayed quenching results in an enhancement of softer partons at larger angles from the jet axis compared to the case where the daughter partons are resolved immediately after they split from the parent parton. The \Lres\ parameter has the constraint $ 1/(\pi T) < \Lres < 2 /(\pt T$ based on the Debye screening length for the plasma, i.e. the length at which the QGP is able to resolve and screen color charges.
 
 %The effects of including the \Lres parameter in the context of jet observables are discussed below.
 
@@ -338,45 +338,38 @@ A screening effect recently included in the hybrid model is based on the resolvi
 \end{figure}
 
 
-The free parameter $\kappa_\mathrm{sc}$ is determined by fitting to jet \RAA\ data from CMS \cite{Khachatryan:2016jfl} as shown in Figure~\ref{fig:hm_fitting}. It can be seen that including the \Lres\ parameter does not really affect the jet \RAA\ prediction. It is more interesting to note the \RAA\ dependence on the size of the jet radius, with wider jets losing more energy as expected. 
-
+The free parameter $\kappa_\mathrm{sc}$ is determined by fitting to jet \RAA\ data from CMS \cite{Khachatryan:2016jfl} as shown in Figure~\ref{fig:hm_fitting}. It can be seen that including the \Lres\ parameter does not really affect the jet \RAA\ prediction. The dependence of the \RAA\ on the size of the jet radius can be seen. This is consistent with the expectation that wider jets lose more energy.
 
 \begin{figure}[htbp]
 \begin{center}
-\includegraphics[width=0.75\textwidth]{figures/jetMeasurements/HM_raa}
+\includegraphics[width=1\textwidth]{figures/jetMeasurements/HM_raa}
 \caption{The hybrid model without (left) and with (right) the \Lres\ parameter, compared to the jet \RAA\ as a function of jet \pt\ in two centrality intervals as measured in Ref. \cite{Khachatryan:2016jfl}. The different colors correspond to different jet radii. The Hybrid Model is fit to the 100--110 GeV point from the data, giving rise to the colored bands. Figure taken from \cite{Hulcher:2017cpt}. }
 \label{fig:hm_fitting}
 \end{center}
 \end{figure}
 
-Fixing the $\kappa_\mathrm{sc}$ parameter allows for predictions of jet fragmentation. A comparison of the measured and modeled values of the ratio between jet fragmentation functions in the \pp\ and \pbpb\ systems are shown in Figure~\ref{fig:hm_ff}. 
+Fixing the $\kappa_\mathrm{sc}$ parameter allows for predictions of other jet measurements like jet fragmentation and jet shape. Figures~\ref{fig:hm_ff} and \ref{fig:hm_jetshape} show a comparison of the measured and modeled values of the modifications to the jet fragmentation and jet shape respectively.  The model has also been compared to measurements done by ATLAS, ALICE, and STAR \cite{2013220, Abelev:2013kqa, RUSNAK:2014xfa} \cite{}
 
-\begin{figure}[htbp]
-\begin{center}
-\includegraphics[width=0.75\textwidth]{figures/jetMeasurements/HM_FF}
-\caption{The modification to the jet fragmentation from \pp\ to \pbpb\ as a function of $\ln(1/z)$ as measured in Ref. \cite{Khachatryan:2016jfl} compared to the predictions of the hybrid model. The predictions are shown without (left) and with (right) the wake from the QGP responding to the jet. The different colors correspond to different \Lres\ parameters. Figure taken from \cite{Hulcher:2017cpt}. }
+
+\begin{figure}
+\begin{subfigure}{1\textwidth}
+  \centering
+\includegraphics[width=1\textwidth]{figures/jetMeasurements/HM_FF}
+\caption{The modification to the jet fragmentation from \pp\ to \pbpb\ as a function of $\ln(1/z)$ as measured in Ref. \cite{Chatrchyan:2014ava} compared to the predictions of the hybrid model. The predictions are shown without (left) and with (right) the effect of the wake from the QGP responding to the jet. The different colors correspond to different \Lres\ parameters. Figure taken from \cite{Hulcher:2017cpt}. }
 \label{fig:hm_ff}
-\end{center}
+\end{subfigure} \\ \\ \\
+\begin{subfigure}{1\textwidth}
+  \centering
+\includegraphics[width=1\textwidth]{figures/jetMeasurements/HM_jetShape}
+\caption{The modification to the jet shape from \pp\ to \pbpb\ as a function of $r$ as measured in Ref. \cite{Chatrchyan:2013kwa} compared to the predictions of the hybrid model. The predictions are shown without (left) and with (right) the effect of the wake from the QGP responding to the jet. The different colors correspond to different \Lres\ parameters. Figure taken from \cite{Hulcher:2017cpt}. }
+\label{fig:hm_jetshape}
+\end{subfigure}
+\caption{A comparison of measured data, MC, and the analytic calculation of the EQ model. Figure taken from \cite{Spousta:2015fca}}
+\label{fig:HM_modification}
 \end{figure}
 
-Here it can be seen that adding a medium response and a non-zero \Lres\ parameter has a non-trivial effect on the prediction. The 
 
-Then the model can be used to predict the \RAA\ dependence on the collision energy, jet \pt,  and centrality and is compared to measurements done by ATLAS, ALICE, and STAR \cite{2013220, Abelev:2013kqa, RUSNAK:2014xfa}.
-
-
-
-
-While the perturbative evolution of vacuum jet showering is dictated by the Dokshitzer-Gribov-Lipatov-Altarelli-Parisi (DGLAP) equation, the presence of a medium adds soft non-perturbative behavior. 
-
-
-
-%Refs. \cite{Qin:2015srf, Ghiglieri:2015zma, Mehtar-Tani:2013pia, Majumder:2010qh, Jacobs:2004qv} review approaches in which the entire process is described using re-summed weakly coupled analyses and Refs. \cite{Chesler:2015nqz, Chesler:2014jva, Chesler:2013urd, DEramo:2010wup, Hatta:2008tx, Gubser:2008as, Chesler:2007an, CasalderreySolana:2006rq, Liu:2006ug, Herzog:2006gh} discuss different aspects of the strong interaction between jets and other energetic probes and the QGP. 
-
-
-.  and processes are  and considers strong-weakthat the QGP is only able to resolve the products of a parton splitting after they are separated by a distance $L_{\mathrm{res}}$. This is done in the context of a hybrid string/weak coupling model of jet quenching, with the resolution parameter resulting in a delayed quenching for partons with intermediate \pt, causing an excess of final state hadrons carrying transverse momenta in the several GeV range. This effect is seen in the modifications oft he jet shapes and jet fragmentation functions, 
-
-
-
+Here it can be seen that adding a medium response and a non-zero \Lres\ parameter affects the prediction. While the hard fragments (see Figure~\ref{}) are unaffected by the medium response, including the soft particles from the wake compensates some of the suppression of soft fragments in \pbpb\ compared to \pp\ collisions. Moreover, including the \Lres\ parameter further compensates the suppression for soft fragments, while reducing the enhancement of the hard fragments. This is a result of allowing more hadrons carrying a smaller fraction of the jet energy (low $z$, high ($\ln(1/z)$) to survive into the final state. The jet shape observable (see Figure~\ref{}) quantifies the radial distribution of energy in terms of annuli around the jet axis. It can be seen that introducing the \Lres\ parameter enhances the probability to find final state hadrons at larger distances from the jet axis. The jet core ($r < 0.05$) is also affected, with the depletion only slowly evolving with an increasing \Lres. One must be careful before making conclusions though, since these modifications are made between jets that are quenched (in \pbpb\ ) and unquenched (in \pp\ ). Taking into account the fact that wider jets lose more energy and that the jet spectrum rapidly falls off, there is a bias for finding narrower quenched jets than unquenched jets. This makes the jet shape after quenching narrower in \pbpb\ compared to \pp. While the model is not fully able to capture the features in the data, including the medium response moves it in the correct direction. It can be suggested that the model is missing a description of the medium induced modification to the hadronization process or that the wakes in the plasma are not equilibrating.
 
 
 
